# pipa_rs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  cobertura.xml  rustfmt.toml
.github/workflows/: ci.yml
crates/pipa_cli/: Cargo.toml
crates/pipa_cli/src/: main.rs
crates/pipa_cli/tests/: stat.rs
crates/pipa_collector/: Cargo.toml
crates/pipa_collector/src/: lib.rs  raw_perf_events.rs  system_stats.rs
crates/pipa_core/: Cargo.toml
crates/pipa_parser/: Cargo.toml
crates/pipa_parser/src/: lib.rs
crates/pipad_server/: Cargo.toml
crates/pipad_server/src/: lib.rs
doc/: DESIGN.md
