[workspace]
resolver = "2" # 推荐使用最新的 resolver
members = [
    "crates/pipa_cli",
    "crates/pipa_collector",
    "crates/pipa_core",
    "crates/pipa_parser",
    "crates/pipad_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cagedbird043"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cagedbird043/pipa_rs"
keywords = ["performance", "profiling", "linux", "perf", "analysis"]
categories = ["development-tools::profiling"]

[workspace.dependencies]
# 在这里定义所有 crate 共享的依赖，方便统一管理版本
# 核心依赖
libc = "0.2.176"
perf-event-open-sys = "5.0.0"

# CLI 工具依赖
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.29.0"
bytemuck = "1.24.0"

# 开发和测试依赖
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.14"
