[package]
name = "pipa_rs"                                                                        # 最终的可执行文件名将是 pipa-rs
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Native Performance Analytics Toolchain for Linux, built in Rust (CLI)"

[dependencies]
# 让我们的 CLI 可以调用 collector 中的函数
pipa_collector = { path = "../pipa_collector" }
# 强大的命令行参数解析库
clap = { version = "4.5", features = ["derive"] }
# 优雅的应用程序级错误处理
anyhow = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
