[package]
name = "pipa_collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Provides raw, unsafe bindings to the perf_event_open syscall.
# This is necessary for creating inheritable counter groups for child processes.
perf-event-open-sys = "*"
libc = "*"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
